--- a/src/components/MainNavigation.module.css
+++ b/src/components/MainNavigation.module.css
@@ -2,8 +2,6 @@
   max-width: 60rem;
   margin: auto;
   padding: 2rem;
-  display: flex;
-  justify-content: space-between;
 }
 
 .list {
@@ -19,4 +17,14 @@
 .list a:hover,
 .list a.active {
   color: var(--color-primary-800);
+}
+nav{
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+.end {
+  padding-top: 35px;
+  display: flex;
+  justify-content: flex-end;
 }
